devops/cd/istio/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: exchangerate-dr
spec:
  host: exchangerate-service
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL # Enables mTLS between your 3 pods
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
